--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-minimal
 title: Nazanin Sabri
+description: <a href="nazaninsbr.github.io/CV/CV.pdf" target="_blank">Resume.</a>
