--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Nazanin Sabri
-description: [View My Resume.](./CV/CV.pdf)
+description: [View My Resume.](Files/CV.pdf)
